@@ -113,10 +113,11 @@
     (maybe-fbind
      '(custom-autoload
        decode-char display-graphic-p display-images-p display-visual-class
-       get-display-table make-temp-file next-single-char-property-change
-       put-display-table select-frame-set-input-focus set-buffer-multibyte
-       string-as-multibyte timer-set-function unicode-precedence-list
-       unicode-to-char w32-focus-frame x-focus-frame))
+       get-display-table make-temp-file multibyte-string-p
+       next-single-char-property-change put-display-table
+       select-frame-set-input-focus set-buffer-multibyte string-as-multibyte
+       timer-set-function unicode-precedence-list unicode-to-char
+       w32-focus-frame x-focus-frame))
     (maybe-bind
      '(scroll-margin
        timer-list)))
